tests/Fixtures/views/errors/runtime_dense.tpl
{$a = 1}
{$b = 2}
{$c = $items->countTotalNonExistent()}
{$d = 3}
